--- a/404.html
+++ b/404.html
@@ -1,2 +1,44 @@
-<!doctype html><html lang=en-us><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>whiletruelearn/404.html</title><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="all,follow"><meta name=googlebot content="index,follow,snippet,archive"><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/terminal-0.7.1.min.css><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/animate-3.7.2.min.css><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/console.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script><script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><meta property="og:title" content="404 Page not found"><meta property="og:description" content><meta property="og:type" content="website"><meta property="og:url" content="https://whiletruelearn.github.io/404.html"><meta name=twitter:title content="404 Page not found"><meta name=twitter:description content></head><body class=terminal><div class=container><div class=terminal-nav><header class=terminal-logo><div class="logo terminal-prompt"><a href=https://whiletruelearn.github.io/ class=no-style>whiletruelearn</a>:~#
-<a href=https://whiletruelearn.github.io/404.html>404.html</a>/</div></header><nav class=terminal-menu><ul vocab="https://schema.org/" typeof="BreadcrumbList"><li><a href=https://whiletruelearn.github.io/essays/ typeof="ListItem">essays</a></li><li><a href=https://whiletruelearn.github.io/projects/ typeof="ListItem">projects</a></li></ul></nav></div></div><div class="container animated zoomIn fast"><h1>Page not found</h1><p><a href=https://whiletruelearn.github.io/>Return to the home page</a>.</p><div class=footer><small>&copy; Copyright 2021, Krishna Sangeeth KS</small></div></div></body></html>
+<!doctype html><html lang=en-us>
+<head>
+<meta charset=utf-8>
+<meta http-equiv=x-ua-compatible content="IE=edge">
+<title>whiletruelearn/404.html</title>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=robots content="all,follow">
+<meta name=googlebot content="index,follow,snippet,archive">
+<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/terminal-0.7.1.min.css>
+<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/animate-3.7.2.min.css>
+<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/console.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
+<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
+<meta property="og:title" content="404 Page not found">
+<meta property="og:description" content>
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://whiletruelearn.github.io/404.html">
+<meta name=twitter:title content="404 Page not found">
+<meta name=twitter:description content>
+</head>
+<body class=terminal>
+<div class=container>
+<div class=terminal-nav>
+<header class=terminal-logo>
+<div class="logo terminal-prompt">
+<a href=https://whiletruelearn.github.io/ class=no-style>whiletruelearn</a>:~#
+<a href=https://whiletruelearn.github.io/404.html>404.html</a>/</div></header>
+<nav class=terminal-menu>
+<ul vocab="https://schema.org/" typeof="BreadcrumbList">
+<li><a href=https://whiletruelearn.github.io/essays/ typeof="ListItem">essays</a></li>
+<li><a href=https://whiletruelearn.github.io/projects/ typeof="ListItem">projects</a></li>
+<li><a href=https://whiletruelearn.github.io/stories/ typeof="ListItem">stories</a></li>
+</ul>
+</nav>
+</div>
+</div>
+<div class="container animated zoomIn fast">
+<h1>Page not found</h1>
+<p><a href=https://whiletruelearn.github.io/>Return to the home page</a>.</p>
+<div class=footer>
+<small>&copy; Copyright 2022, Krishna Sangeeth KS</small>
+</div>
+</div>
+</body>
+</html>
