--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,56 @@
-<!doctype html><html lang=en-us><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>whiletruelearn/projects/</title><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="all,follow"><meta name=googlebot content="index,follow,snippet,archive"><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/terminal-0.7.1.min.css><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/animate-3.7.2.min.css><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/console.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script><script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><meta property="og:title" content><meta property="og:description" content><meta property="og:type" content="article"><meta property="og:url" content="https://whiletruelearn.github.io/projects/"><meta name=twitter:title content><meta name=twitter:description content="Projects These are some of the open source projects that I have worked on.
+<!doctype html><html lang=en-us>
+<head>
+<meta charset=utf-8>
+<meta http-equiv=x-ua-compatible content="IE=edge">
+<title>whiletruelearn/projects/</title>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=robots content="all,follow">
+<meta name=googlebot content="index,follow,snippet,archive">
+<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/terminal-0.7.1.min.css>
+<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/animate-3.7.2.min.css>
+<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/console.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
+<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
+<meta property="og:title" content>
+<meta property="og:description" content>
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://whiletruelearn.github.io/projects/">
+<meta name=twitter:title content>
+<meta name=twitter:description content="Projects These are some of the open source projects that I have worked on.
 WhatTheLang A python library for language detection.
 Vangogh A prisma like web-app that performs Fast Neural style transfer.
 Collaborators : Bala , Anurag
-Morpheus A toolkit for exploring fundamental algorithms in Linear Algebra."></head><body class=terminal><div class=container><div class=terminal-nav><header class=terminal-logo><div class="logo terminal-prompt"><a href=https://whiletruelearn.github.io/ class=no-style>whiletruelearn</a>:~#
-<a href=https://whiletruelearn.github.io/projects>projects</a>/</div></header><nav class=terminal-menu><ul vocab="https://schema.org/" typeof="BreadcrumbList"><li><a href=https://whiletruelearn.github.io/essays/ typeof="ListItem">essays</a></li><li><a href=https://whiletruelearn.github.io/projects/ typeof="ListItem">projects</a></li></ul></nav></div></div><div class="container animated zoomIn fast"><h1></h1><h1 id=projects>Projects</h1><p>These are some of the open source projects that I have worked on.</p><h1 id=whatthelanghttpsgithubcomindixwhatthelang><a href=https://github.com/indix/whatthelang>WhatTheLang</a></h1><p>A python library for language detection.</p><h1 id=vangoghhttpsgithubcomwhiletruelearnvangogh><a href=https://github.com/whiletruelearn/vangogh>Vangogh</a></h1><p>A prisma like web-app that performs Fast Neural style transfer.</p><p>Collaborators : <a href=https://github.com/rbs392>Bala</a> , <a href=https://github.com/anuragmishracse>Anurag</a></p><h1 id=morpheushttpsgithubcomwhiletruelearnmorpheus><a href=https://github.com/whiletruelearn/morpheus>Morpheus</a></h1><p>A toolkit for exploring fundamental algorithms in Linear Algebra.</p><div class=footer><small>&copy; Copyright 2021, Krishna Sangeeth KS</small></div></div></body></html>
+Morpheus A toolkit for exploring fundamental algorithms in Linear Algebra.">
+</head>
+<body class=terminal>
+<div class=container>
+<div class=terminal-nav>
+<header class=terminal-logo>
+<div class="logo terminal-prompt">
+<a href=https://whiletruelearn.github.io/ class=no-style>whiletruelearn</a>:~#
+<a href=https://whiletruelearn.github.io/projects>projects</a>/</div></header>
+<nav class=terminal-menu>
+<ul vocab="https://schema.org/" typeof="BreadcrumbList">
+<li><a href=https://whiletruelearn.github.io/essays/ typeof="ListItem">essays</a></li>
+<li><a href=https://whiletruelearn.github.io/projects/ typeof="ListItem">projects</a></li>
+<li><a href=https://whiletruelearn.github.io/stories/ typeof="ListItem">stories</a></li>
+</ul>
+</nav>
+</div>
+</div>
+<div class="container animated zoomIn fast">
+<h1></h1>
+<h1 id=projects>Projects</h1>
+<p>These are some of the open source projects that I have worked on.</p>
+<h1 id=whatthelanghttpsgithubcomindixwhatthelang><a href=https://github.com/indix/whatthelang>WhatTheLang</a></h1>
+<p>A python library for language detection.</p>
+<h1 id=vangoghhttpsgithubcomwhiletruelearnvangogh><a href=https://github.com/whiletruelearn/vangogh>Vangogh</a></h1>
+<p>A prisma like web-app that performs Fast Neural style transfer.</p>
+<p>Collaborators : <a href=https://github.com/rbs392>Bala</a> , <a href=https://github.com/anuragmishracse>Anurag</a></p>
+<h1 id=morpheushttpsgithubcomwhiletruelearnmorpheus><a href=https://github.com/whiletruelearn/morpheus>Morpheus</a></h1>
+<p>A toolkit for exploring fundamental algorithms in Linear Algebra.</p>
+<div class=footer>
+<small>&copy; Copyright 2022, Krishna Sangeeth KS</small>
+</div>
+</div>
+</body>
+</html>
