--- a/projects/index.html
+++ b/projects/index.html
@@ -17,9 +17,13 @@
 <meta name=twitter:title content>
 <meta name=twitter:description content="Projects These are some of the open source projects that I have worked on.
 WhatTheLang A python library for language detection.
+Collaborators : Manoj
 Vangogh A prisma like web-app that performs Fast Neural style transfer.
 Collaborators : Bala , Anurag
-Morpheus A toolkit for exploring fundamental algorithms in Linear Algebra.">
+Morpheus A toolkit for exploring fundamental algorithms in Linear Algebra.
+Quidditch An innersource framework for doing Anomaly detection.
+Collaborators : Raghavan, Venkat, Adi, Raaghul, Gautham, Sharmili, Milan, Ebe
+SIMS An innersource simulator for mobility pattern written from scratch in Python using real world topology.">
 </head>
 <body class=terminal>
 <div class=container>
@@ -43,11 +47,19 @@ Morpheus A toolkit for exploring fundamental algorithms in Linear Algebra.">
 <p>These are some of the open source projects that I have worked on.</p>
 <h1 id=whatthelanghttpsgithubcomindixwhatthelang><a href=https://github.com/indix/whatthelang>WhatTheLang</a></h1>
 <p>A python library for language detection.</p>
+<p>Collaborators : <a href=https://www.linkedin.com/in/manojlds/>Manoj</a></p>
 <h1 id=vangoghhttpsgithubcomwhiletruelearnvangogh><a href=https://github.com/whiletruelearn/vangogh>Vangogh</a></h1>
 <p>A prisma like web-app that performs Fast Neural style transfer.</p>
-<p>Collaborators : <a href=https://github.com/rbs392>Bala</a> , <a href=https://github.com/anuragmishracse>Anurag</a></p>
+<p>Collaborators : <a href=https://www.linkedin.com/in/bala-subramaniyan-6a618a21/>Bala</a> , <a href=https://www.linkedin.com/in/anuragmishracse/>Anurag</a></p>
 <h1 id=morpheushttpsgithubcomwhiletruelearnmorpheus><a href=https://github.com/whiletruelearn/morpheus>Morpheus</a></h1>
 <p>A toolkit for exploring fundamental algorithms in Linear Algebra.</p>
+<h1 id=quidditchhttpswwwericssoncomenblog20207how-to-make-anomaly-detection-more-accessible><a href=https://www.ericsson.com/en/blog/2020/7/how-to-make-anomaly-detection-more-accessible>Quidditch</a></h1>
+<p>An innersource framework for doing Anomaly detection.</p>
+<p>Collaborators : <a href=https://www.linkedin.com/in/raghavan-a-k-3a102713/>Raghavan</a>, <a href=https://www.linkedin.com/in/venkatachalam-n-b8a17a18/>Venkat</a>, <a href=https://www.linkedin.com/in/adithya-krishnan-0a7b66a8/>Adi</a>, <a href=https://www.linkedin.com/in/rraaghul/>Raaghul</a>, <a href=https://www.linkedin.com/in/gauthamkrishna-g/>Gautham</a>, <a href=https://www.linkedin.com/in/sharmili-srinivasan-40925a41/>Sharmili</a>, <a href=https://www.linkedin.com/in/milan-b-27585054/>Milan</a>, <a href=https://www.linkedin.com/in/ebenezer-isaac/>Ebe</a></p>
+<h1 id=sims>SIMS</h1>
+<p>An innersource simulator for mobility pattern written from scratch in Python using real world topology.
+Inspired by OMNET++, with support for scaling upto 10K UE&rsquo;s.</p>
+<p>Collaborators : <a href=https://www.linkedin.com/in/venkateshumaashankar/>Venki</a>, <a href=https://www.linkedin.com/in/adithya-krishnan-0a7b66a8/>Adi</a></p>
 <div class=footer>
 <small>&copy; Copyright 2022, Krishna Sangeeth KS</small>
 </div>
