deploy: 3820a29d766a577baf9ebec864696471799a5bb3

--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://whiletruelearn.github.io/projects/">
 <meta name=twitter:title content>
-<meta name=twitter:description content="Projects These are some of the open source projects that I have worked on.
+<meta name=twitter:description content="Projects These are some of the open/inner source projects that I have worked on.
 WhatTheLang A python library for language detection.
 Collaborators : Manoj
 Vangogh A prisma like web-app that performs Fast Neural style transfer.
@@ -44,7 +44,7 @@ SIMS An innersource simulator for mobility pattern written from scratch in Pytho
 <div class="container animated zoomIn fast">
 <h1></h1>
 <h1 id=projects>Projects</h1>
-<p>These are some of the open source projects that I have worked on.</p>
+<p>These are some of the open/inner source projects that I have worked on.</p>
 <h1 id=whatthelanghttpsgithubcomindixwhatthelang><a href=https://github.com/indix/whatthelang>WhatTheLang</a></h1>
 <p>A python library for language detection.</p>
 <p>Collaborators : <a href=https://www.linkedin.com/in/manojlds/>Manoj</a></p>
