deploy: d0cf0045e9246a4a0c6c56c583ff47ba85e99b43

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,21 +1,5 @@
-<!doctype html><html lang=en-us>
-<head>
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<title>whiletruelearn/projects/</title>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=robots content="all,follow">
-<meta name=googlebot content="index,follow,snippet,archive">
-<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/terminal-0.7.1.min.css>
-<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/animate-3.7.2.min.css>
-<link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/console.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
-<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]-->
-<meta property="og:title" content>
-<meta property="og:description" content>
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://whiletruelearn.github.io/projects/">
-<meta name=twitter:title content>
-<meta name=twitter:description content="Projects These are some of the open/inner source projects that I have worked on.
+<!doctype html><html lang=en-us><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><title>whiletruelearn/projects/</title><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="all,follow"><meta name=googlebot content="index,follow,snippet,archive"><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/terminal-0.7.1.min.css><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/animate-3.7.2.min.css><link rel=stylesheet href=https://whiletruelearn.github.io/hugo-theme-console/css/console.css><!--[if lt IE 9]><script src=https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js></script>
+<script src=https://oss.maxcdn.com/respond/1.4.2/respond.min.js></script><![endif]--><meta property="og:title" content><meta property="og:description" content><meta property="og:type" content="article"><meta property="og:url" content="https://whiletruelearn.github.io/projects/"><meta name=twitter:title content><meta name=twitter:description content="Projects These are some of the open/inner source projects that I have worked on.
 WhatTheLang A python library for language detection.
 Collaborators : Manoj
 Vangogh A prisma like web-app that performs Fast Neural style transfer.
@@ -23,46 +7,6 @@ Collaborators : Bala , Anurag
 Morpheus A toolkit for exploring fundamental algorithms in Linear Algebra.
 Quidditch An innersource framework for doing Anomaly detection.
 Collaborators : Raghavan, Venkat, Adi, Raaghul, Gautham, Sharmili, Milan, Ebe
-SIMS An innersource simulator for mobility pattern written from scratch in Python using real world topology.">
-</head>
-<body class=terminal>
-<div class=container>
-<div class=terminal-nav>
-<header class=terminal-logo>
-<div class="logo terminal-prompt">
-<a href=https://whiletruelearn.github.io/ class=no-style>whiletruelearn</a>:~#
-<a href=https://whiletruelearn.github.io/projects>projects</a>/</div></header>
-<nav class=terminal-menu>
-<ul vocab="https://schema.org/" typeof="BreadcrumbList">
-<li><a href=https://whiletruelearn.github.io/essays/ typeof="ListItem">essays</a></li>
-<li><a href=https://whiletruelearn.github.io/projects/ typeof="ListItem">projects</a></li>
-<li><a href=https://whiletruelearn.github.io/stories/ typeof="ListItem">stories</a></li>
-</ul>
-</nav>
-</div>
-</div>
-<div class="container animated zoomIn fast">
-<h1></h1>
-<h1 id=projects>Projects</h1>
-<p>These are some of the open/inner source projects that I have worked on.</p>
-<h1 id=whatthelanghttpsgithubcomindixwhatthelang><a href=https://github.com/indix/whatthelang>WhatTheLang</a></h1>
-<p>A python library for language detection.</p>
-<p>Collaborators : <a href=https://www.linkedin.com/in/manojlds/>Manoj</a></p>
-<h1 id=vangoghhttpsgithubcomwhiletruelearnvangogh><a href=https://github.com/whiletruelearn/vangogh>Vangogh</a></h1>
-<p>A prisma like web-app that performs Fast Neural style transfer.</p>
-<p>Collaborators : <a href=https://www.linkedin.com/in/bala-subramaniyan-6a618a21/>Bala</a> , <a href=https://www.linkedin.com/in/anuragmishracse/>Anurag</a></p>
-<h1 id=morpheushttpsgithubcomwhiletruelearnmorpheus><a href=https://github.com/whiletruelearn/morpheus>Morpheus</a></h1>
-<p>A toolkit for exploring fundamental algorithms in Linear Algebra.</p>
-<h1 id=quidditchhttpswwwericssoncomenblog20207how-to-make-anomaly-detection-more-accessible><a href=https://www.ericsson.com/en/blog/2020/7/how-to-make-anomaly-detection-more-accessible>Quidditch</a></h1>
-<p>An innersource framework for doing Anomaly detection.</p>
-<p>Collaborators : <a href=https://www.linkedin.com/in/raghavan-a-k-3a102713/>Raghavan</a>, <a href=https://www.linkedin.com/in/venkatachalam-n-b8a17a18/>Venkat</a>, <a href=https://www.linkedin.com/in/adithya-krishnan-0a7b66a8/>Adi</a>, <a href=https://www.linkedin.com/in/rraaghul/>Raaghul</a>, <a href=https://www.linkedin.com/in/gauthamkrishna-g/>Gautham</a>, <a href=https://www.linkedin.com/in/sharmili-srinivasan-40925a41/>Sharmili</a>, <a href=https://www.linkedin.com/in/milan-b-27585054/>Milan</a>, <a href=https://www.linkedin.com/in/ebenezer-isaac/>Ebe</a></p>
-<h1 id=sims>SIMS</h1>
-<p>An innersource simulator for mobility pattern written from scratch in Python using real world topology.
-Inspired by OMNET++, with support for scaling upto 10K UE&rsquo;s.</p>
-<p>Collaborators : <a href=https://www.linkedin.com/in/venkateshumaashankar/>Venki</a>, <a href=https://www.linkedin.com/in/adithya-krishnan-0a7b66a8/>Adi</a></p>
-<div class=footer>
-<small>&copy; Copyright 2022, Krishna Sangeeth KS</small>
-</div>
-</div>
-</body>
-</html>
+SIMS An innersource simulator for mobility pattern written from scratch in Python using real world topology."></head><body class=terminal><div class=container><div class=terminal-nav><header class=terminal-logo><div class="logo terminal-prompt"><a href=https://whiletruelearn.github.io/ class=no-style>whiletruelearn</a>:~#
+<a href=https://whiletruelearn.github.io/projects>projects</a>/</div></header><nav class=terminal-menu><ul vocab="https://schema.org/" typeof="BreadcrumbList"><li><a href=https://whiletruelearn.github.io/essays/ typeof="ListItem">essays</a></li><li><a href=https://whiletruelearn.github.io/projects/ typeof="ListItem">projects</a></li><li><a href=https://whiletruelearn.github.io/stories/ typeof="ListItem">stories</a></li></ul></nav></div></div><div class="container animated zoomIn fast"><h1></h1><h1 id=projects>Projects</h1><p>These are some of the open/inner source projects that I have worked on.</p><h1 id=whatthelanghttpsgithubcomindixwhatthelang><a href=https://github.com/indix/whatthelang>WhatTheLang</a></h1><p>A python library for language detection.</p><p>Collaborators : <a href=https://www.linkedin.com/in/manojlds/>Manoj</a></p><h1 id=vangoghhttpsgithubcomwhiletruelearnvangogh><a href=https://github.com/whiletruelearn/vangogh>Vangogh</a></h1><p>A prisma like web-app that performs Fast Neural style transfer.</p><p>Collaborators : <a href=https://www.linkedin.com/in/bala-subramaniyan-6a618a21/>Bala</a> , <a href=https://www.linkedin.com/in/anuragmishracse/>Anurag</a></p><h1 id=morpheushttpsgithubcomwhiletruelearnmorpheus><a href=https://github.com/whiletruelearn/morpheus>Morpheus</a></h1><p>A toolkit for exploring fundamental algorithms in Linear Algebra.</p><h1 id=quidditchhttpswwwericssoncomenblog20207how-to-make-anomaly-detection-more-accessible><a href=https://www.ericsson.com/en/blog/2020/7/how-to-make-anomaly-detection-more-accessible>Quidditch</a></h1><p>An innersource framework for doing Anomaly detection.</p><p>Collaborators : <a href=https://www.linkedin.com/in/raghavan-a-k-3a102713/>Raghavan</a>, <a href=https://www.linkedin.com/in/venkatachalam-n-b8a17a18/>Venkat</a>, <a href=https://www.linkedin.com/in/adithya-krishnan-0a7b66a8/>Adi</a>, <a href=https://www.linkedin.com/in/rraaghul/>Raaghul</a>, <a href=https://www.linkedin.com/in/gauthamkrishna-g/>Gautham</a>, <a href=https://www.linkedin.com/in/sharmili-srinivasan-40925a41/>Sharmili</a>, <a href=https://www.linkedin.com/in/milan-b-27585054/>Milan</a>, <a href=https://www.linkedin.com/in/ebenezer-isaac/>Ebe</a></p><h1 id=sims>SIMS</h1><p>An innersource simulator for mobility pattern written from scratch in Python using real world topology.
+Inspired by OMNET++, with support for scaling upto 10K UE&rsquo;s.</p><p>Collaborators : <a href=https://www.linkedin.com/in/venkateshumaashankar/>Venki</a>, <a href=https://www.linkedin.com/in/adithya-krishnan-0a7b66a8/>Adi</a></p><h1 id=toy-dhthttpswwwyoutubecomwatchvbsoivl7_oxk><a href="https://www.youtube.com/watch?v=BsOIvL7_oXk">Toy DHT</a></h1><p>A toy distributed hash table using consistent hashing, data replication, node addition and failover.</p><p>Collaborator : <a href=https://www.linkedin.com/in/rraaghul/>Raaghul</a></p><div class=footer><small>&copy; Copyright 2022, Krishna Sangeeth KS</small></div></div></body></html>
