--- a/index.html
+++ b/index.html
@@ -3,5 +3,4 @@
 I have been working as a freelance engineer/consultant for the past year or so. Below is my <a href=https://linkedin.com/in/whiletruelearn>career highlights</a> so far.<ul><li>Machine Learning Lead @ Avalara</li><li>Senior Data Scientist @ Ericsson</li><li>ML Engineer @ Indix</li><li>Software Engineer @ TCS</li></ul></p><p>I hold a Master's degree in Datascience and Engineering from BITS Pilani and a Bachelors Degree in Computer Science Engineering from
 College of Engineering Chengannur.</p>I am a very curious person in general about the world and how stuff works. Some of this curiosity has made me decently good at building software.
 I try and fail most days to embody the virtues <a href=https://en.wikipedia.org/wiki/Stoicism>Stoicism.</a>
-I usually post my rants about life, universe and everything else in <a href=https://x.com/whiletruelearn>Twitter</a></p>.
-Last Updated : Nov 2024<br><div class=footer><small>&copy; Copyright 2022, Krishna Sangeeth KS</small></div></div></body></html>
+I usually post my rants about life, universe and everything else in <a href=https://x.com/whiletruelearn>Twitter </a>.</p>Last Updated : Nov 2024<br><div class=footer><small>&copy; Copyright 2024, Krishna Sangeeth KS</small></div></div></body></html>
